--- a/src/main/webapp/WEB-INF/pages/fragments/side/customer.jspf
+++ b/src/main/webapp/WEB-INF/pages/fragments/side/customer.jspf
@@ -6,60 +6,30 @@
     <hr>
     <ul class="nav nav-pills flex-column mb-auto">
         <li class="nav-item">
-            <a aria-current="page" class="nav-link text-white ${active.equals('home')? 'active' : '' }"
-               href="home">
-                <svg class="bi me-2" height="16" width="16">
-                    <use xlink:href="#home"/>
-                </svg>
-                Home
-            </a>
-        </li>
-        <li class="nav-item">
-            <button aria-expanded="false"
-                    class="nav-link text-white align-items-center rounded collapsed ${active.equals('orders')? 'active' : '' }"
-                    data-bs-target="#orders-collapse"
-                    data-bs-toggle="collapse">
+            <a aria-current="page" class="nav-link text-white ${active.equals('orders')? 'active' : '' }"
+                <ext:href path="/customer/orders"/> >
                 <svg class="bi me-2" height="16" width="16">
                     <use xlink:href="#table"/>
                 </svg>
-                Orders
-            </button>
-            <div class="collapse" id="orders-collapse">
-                <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                    <li><a class="link-light rounded" href="orders">Overview</a></li>
-                    <li><a class="link-light rounded" href="#">New</a></li>
-                    <li><a class="link-light rounded" href="#">Wait for payment</a></li>
-                    <li><a class="link-light rounded" href="#">Payment completed</a></li>
-                    <li><a class="link-light rounded" href="#">Completed</a></li>
-                    <li><a class="link-light rounded" href="#">Canceled</a></li>
-                </ul>
-            </div>
+                <fmt:message key="side.orders"/>
+            </a>
         </li>
         <li class="nav-item">
-            <button aria-expanded="false"
-                    class="nav-link text-white align-items-center rounded collapsed ${active.equals('responses')? 'active' : '' }"
-                    data-bs-target="#responses-collapse"
-                    data-bs-toggle="collapse">
+            <a aria-current="page" class="nav-link text-white ${active.equals('responses')? 'active' : '' }"
+                <ext:href path="/customer/responses"/>>
                 <svg class="bi me-2" height="16" width="16">
                     <use xlink:href="#people-circle"/>
                 </svg>
-                Responses
-            </button>
-            <div class="collapse" id="responses-collapse">
-                <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                    <li><a class="link-light rounded" href="responses">Overview</a></li>
-                    <li><a class="link-light rounded" href="#">Unverified</a></li>
-                    <li><a class="link-light rounded" href="#">Verified</a></li>
-                </ul>
-            </div>
+                <fmt:message key="side.responses"/>
+            </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-white align-items-center rounded collapsed ${active.equals('wallets')? 'active' : '' }"
-               href="wallets">
+            <a aria-current="page" class="nav-link text-white ${active.equals('wallets')? 'active' : '' }"
+                <ext:href path="/customer/wallets"/>>
                 <svg class="bi me-2" height="16" width="16">
                     <use xlink:href="#grid"/>
                 </svg>
-                Wallets
+                <fmt:message key="side.wallets"/>
             </a>
         </li>
     </ul>
