--- a/src/main/webapp/WEB-INF/pages/fragments/manager/masters.jspf
+++ b/src/main/webapp/WEB-INF/pages/fragments/manager/masters.jspf
@@ -9,33 +9,33 @@
                 <ul class="list-group text-center">
                     <li class="list-group-item">
                         <input class="btn btn-primary btn-user btn-block search-submit" type="submit"
-                               value="Apply">
+                               value=<fmt:message key="search.apply"/>>
                     </li>
                     <li class="list-group-item">
-                        <label for="sort_select"> Sort by </label>
+                        <label for="sort_select"> <fmt:message key="sort.by"/></label>
                         <select class="form-select" id="sort_select" name="sort">
                             <option <ext:selected test="${search.sort=='username'&&search.sort==''}"/>>
-                                username
+                                <fmt:message key="sort.by.username"/>
                             </option>
                             <option <ext:selected test="${search.sort=='name'}"/> >
-                                name
+                                <fmt:message key="sort.by.name"/>
                             </option>
                         </select>
                     </li>
                     <li class="list-group-item list-group-item-secondary">
-                        Filter by
+                        <fmt:message key="filter.by"/>
                     </li>
                     <li class="list-group-item">
                         <button class="btn btn-primary" data-bs-target="#collapseUsername"
                                 data-bs-toggle="collapse"
                                 type="button">
-                            username
+                            <fmt:message key="search.by.username"/>
                         </button>
                         <div class="collapse px-auto ${(search.username!= null && !search.username.isBlank()) ? 'show' : ''}" id="collapseUsername">
                             <div class="list-group">
                                 <div class="input-group mb-3">
                                     <span class="input-group-text" id="basic-addon1">@</span>
-                                    <input class="form-control" name="username" placeholder="Username"
+                                    <input class="form-control" name="username" placeholder=<fmt:message key="user.username"/>
                                            value="${search.username}"
                                            type="text">
                                 </div>
@@ -49,11 +49,11 @@
             <table class="table table-bordered border-primary">
                 <thead class="table-dark align-middle">
                 <tr class="head" id="userHead">
-                    <th scope="col">Username</th>
-                    <th scope="col">First Name</th>
-                    <th scope="col">Last Name</th>
-                    <th scope="col">Phone</th>
-                    <th scope="col">Roles</th>
+                    <th scope="col"><fmt:message key="table.username"/></th>
+                    <th scope="col"><fmt:message key="table.firstName"/></th>
+                    <th scope="col"><fmt:message key="table.lastName"/></th>
+                    <th scope="col"><fmt:message key="table.phone"/></th>
+                    <th scope="col"><fmt:message key="table.roles"/></th>
                 </tr>
                 </thead>
                 <tbody class="table-group-divider">
