--- a/src/main/webapp/WEB-INF/pages/fragments/side/master.jspf
+++ b/src/main/webapp/WEB-INF/pages/fragments/side/master.jspf
@@ -6,52 +6,22 @@
     <hr>
     <ul class="nav nav-pills flex-column mb-auto">
         <li class="nav-item">
-            <a aria-current="page" class="nav-link text-white ${active.equals('home')? 'active' : '' }"
-               href="home">
-                <svg class="bi me-2" height="16" width="16">
-                    <use xlink:href="#home"/>
-                </svg>
-                Home
-            </a>
-        </li>
-        <li class="nav-item">
-            <button aria-expanded="false"
-                    class="nav-link text-white align-items-center rounded collapsed ${active.equals('orders')? 'active' : '' }"
-                    data-bs-target="#orders-collapse"
-                    data-bs-toggle="collapse">
+            <a aria-current="page" class="nav-link text-white ${active.equals('orders')? 'active' : '' }"
+                <ext:href path="/master/orders"/> >
                 <svg class="bi me-2" height="16" width="16">
                     <use xlink:href="#table"/>
                 </svg>
-                Orders
-            </button>
-            <div class="collapse" id="orders-collapse">
-                <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                    <li><a class="link-light rounded" href="orders">Overview</a></li>
-                    <li><a class="link-light rounded" href="#">New</a></li>
-                    <li><a class="link-light rounded" href="#">Wait for payment</a></li>
-                    <li><a class="link-light rounded" href="#">Payment completed</a></li>
-                    <li><a class="link-light rounded" href="#">Completed</a></li>
-                    <li><a class="link-light rounded" href="#">Canceled</a></li>
-                </ul>
-            </div>
+                <fmt:message key="side.orders"/>
+            </a>
         </li>
-        <li>
-            <button aria-expanded="false"
-                    class="nav-link text-white align-items-center rounded collapsed ${active.equals('responses')? 'active' : '' }"
-                    data-bs-target="#responses-collapse"
-                    data-bs-toggle="collapse">
+        <li class="nav-item">
+            <a aria-current="page" class="nav-link text-white ${active.equals('responses')? 'active' : '' }"
+                <ext:href path="/master/responses"/> >
                 <svg class="bi me-2" height="16" width="16">
                     <use xlink:href="#people-circle"/>
                 </svg>
-                Responses
-            </button>
-            <div class="collapse" id="responses-collapse">
-                <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                    <li><a class="link-light rounded" href="responses">Overview</a></li>
-                    <li><a class="link-light rounded" href="#">Unverified</a></li>
-                    <li><a class="link-light rounded" href="#">Verified</a></li>
-                </ul>
-            </div>
+                <fmt:message key="side.responses"/>
+            </a>
         </li>
     </ul>
 </div>
