--- a/src/main/webapp/WEB-INF/pages/fragments/taglib.jspf
+++ b/src/main/webapp/WEB-INF/pages/fragments/taglib.jspf
@@ -22,6 +22,6 @@ JSTL i18n tag library.
 <%@ taglib prefix="frmt" uri="/WEB-INF/tld/format"%>
 <c:set var="locale" value="${sessionScope.get('SessionLocaleResolver.LOCALE')}" />
 
-<fmt:setLocale value="${locale.language}"/>
+<fmt:setLocale value="${locale}"/>
 
 <fmt:setBundle basename="messages" />
