--- a/src/main/webapp/WEB-INF/pages/fragments/manager/users.jspf
+++ b/src/main/webapp/WEB-INF/pages/fragments/manager/users.jspf
@@ -70,7 +70,7 @@
                         <td>
                             <ul class="list-group">
                                 <c:forEach var="role" items="${user.roles}">
-                                    <li class="list-group-item">${role.name}</li>
+                                    <li class="list-group-item"><ext:roleGet var="${role.name}"/></li>
                                 </c:forEach>
                             </ul>
                         </td>
